[package]
name = "seaport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
log = "0.4.17"
env_logger = "0.10.0"
iced = "0.8.0"
serde = {version="1.0.156", features = ["derive"]}
serde_json = "1.0.94"
serde_repr = "0.1.11"
md5 = "0.7.0"
walkdir = "2.3.3"
notify = "5.1.0"
tokio = { version = "1.26.0", features = ["full"] }
axum = "0.6.11"
lazy_static = "1.4.0"
