[package]
name = "seaport"
version = "0.1.1"
authors = ["Michael Chi <chicong@outlook.com>"]
edition = "2021"
description = "A sync server"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"
iced = {version = "0.8.0", features = ["image_rs"] }
iced_aw = { version = "0.4.1", default-features = false, features = ["menu", "modal", "card"] }
serde = {version="1.0.156", features = ["derive"]}
serde_json = "1.0.94"
serde_repr = "0.1.11"
futures = "0.3.27"
md5 = "0.7.0"
walkdir = "2.3.3"
notify = "5.1.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
axum = "0.6.11"
lazy_static = "1.4.0"
image = "0.24.5"
